--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -29,18 +29,59 @@ require(tidyverse)
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 1137 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
+We will create a dataset containing all of the days of the year. Then we will run the sample with replacements 1,137 times. We take a sample of 35, if two come out the same, Brownlow gets one dollar, if they don't come out the same, he will lose two. This will be repeated 1,137 times.We will then set up a histogram containing our output. swe will create barriers, with 2.5% of the winnings on either side, therefore the middle displays 95% confidence.
+
 
 #Profit Estimate
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting!-->
+
+First we will create the year data and a vector to contain samples.
+
+```{r}
+Bdays = 1:365
+Bsamples = vector('numeric')
+TotalDollars = 0
+saveDollars=vector('numeric')
+```
+
+Now we will run the simulation 1137 times.
+
+```{r}
+for(loop in 1:1000){
+TotalDollars=0
+for(i in 1:1137) {
+Bsamples = sample(Bdays,35, replace=TRUE)
+if (length(unique(Bsamples)) == 35) {
+TotalDollars = TotalDollars -2
+} else{
+TotalDollars = TotalDollars +1
+}
+}
+saveDollars[loop] = TotalDollars
+}
+hist(saveDollars)
+print(mean(saveDollars))
+
+```
+
 
 
 # Confidence interval of Brownlows earning
 
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows-->
 
+```{r}
+stdevDollars = sd(saveDollars)
+meanDollars=mean(saveDollars)
+CI = c(meanDollars-2*stdevDollars, meanDollars+2*stdevDollars)
+print(CI)
+```
+
+
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
 
+To adjust the payout, Brownlow could change his win to +1 and his losses to -4.50 which would center it at about zero. To adjust the class size, it would have to be about 28 or 29, then his payout woud be centered around zero.
